<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Submission3</string>
    <string name="username">Username</string>
    <string name="location_detail">Location: %s</string>
    <string name="company_detail">Company: %s</string>
    <string name="repository_detail"><xliff:g id="application_homepage">Repository: %s</xliff:g></string>
    <string name="follower_detail">Follower: %s</string>
    <string name="following_detail">Following: %s</string>
    <string name="search_username">Search Username</string>
    <string name="search_now">Search Now!</string>
    <string name="follower_tab">Follower Tab</string>
    <string name="following_tab">Following Tab</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome,</string>
    <string name="who_would_you_like_to_find">Who would you like to find ?</string>
    <string name="result">Search Result</string>
    <string name="setting_language">Setting Language</string>
    <string name="back_button">Back Button</string>
    <string name="list_of_favorite_people">List of favorite people</string>
    <string name="user_favorite">User Favorite</string>
    <string name="no_data_available">No data available</string>
    <string name="setting_your_apps">Setting your apps</string>
    <string name="settings">Settings</string>
    <string name="setting_daily_remider">Setting Daily Reminder at 9.00 AM</string>
    <string name="key_reminder">reminder</string>
    <string name="lets_find_popular_user_on_github">Lets find popular user on Github</string>
    <string name="add_to_favorite">add to favorite</string>
</resources>