<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rl_activityfavorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/top">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/top"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="16dp">

            <ImageButton
                android:id="@+id/imgbtn_back"
                android:contentDescription="@string/back_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/crimsonpro_medium"
                android:text="@string/user_favorite"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/imgbtn_back"
                app:layout_constraintTop_toTopOf="@id/imgbtn_back" />

            <ImageButton
                android:id="@+id/imgbtn_setting"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/setting_language"
                app:layout_constraintBottom_toBottomOf="@+id/imgbtn_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imgbtn_back"
                android:background="@color/top"
                android:src="@drawable/ic_baseline_settings_24"
                tools:srcCompat="@drawable/ic_baseline_settings_24" />

            <TextView
                android:id="@+id/tv_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/crimsonpro_medium"
                android:text="@string/list_of_favorite_people"
                android:textColor="@color/top_second_text"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imgbtn_back"
                app:layout_constraintTop_toBottomOf="@+id/tv_main" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/detail_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="12dp"
            android:fontFamily="@font/crimsonpro_medium"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_below="@id/cl_top"
            android:layout_gravity="center"
            android:background="@drawable/detail_card_background"
            android:text="@string/no_data_available"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:layout_below="@id/cl_top"
            android:background="@drawable/detail_card_background"
            android:layout_centerHorizontal="true"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_users"
            android:layout_below="@id/cl_top"
            android:background="@drawable/detail_card_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_row_user" />

    </RelativeLayout>

</ScrollView>