<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rl_activityfavorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/top">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/top"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="16dp">

            <ImageButton
                android:id="@+id/imgbtn_back"
                android:contentDescription="@string/back_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/crimsonpro_medium"
                android:text="@string/settings"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/imgbtn_back"
                app:layout_constraintTop_toTopOf="@id/imgbtn_back" />

            <TextView
                android:id="@+id/tv_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/crimsonpro_medium"
                android:text="@string/setting_your_apps"
                android:textColor="@color/top_second_text"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imgbtn_back"
                app:layout_constraintTop_toBottomOf="@+id/tv_main" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/setting_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/cl_top"
            android:background="@drawable/detail_card_background">

            <TextView
                android:id="@+id/tv_setting_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_language"
                android:padding="16dp"
                android:layout_marginTop="16dp"
                android:drawablePadding="16dp"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:drawableStartCompat="@drawable/ic_baseline_language_24" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>